# c-opengl-test

./: .clangd  README.md  meson.build
includes/glad/: glad.h
shaders/: fragShader.glsl  meson.build  vertShader.glsl
src/: main.c  shader.c  shader.h
src/glad/: glad.c
textures/: meson.build
